Purple: Germline events frequency cache handles amplifications as well as deletions.